--- a/lab_1/my_first_app.ipynb
+++ b/lab_1/my_first_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "2e019cc8",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nazar start programming at 2025-09-18 12:33:54.453150. Lviv is the best city!\n"
+      "Nazar start programming at 2025-09-18 13:11:49.360234. Lviv is the best city!\n"
      ]
     }
    ],
@@ -20,6 +20,32 @@
     "location = \"Lviv\"\n",
     "\n",
     "print(f\"{name} start programming at {datetime.now()}. {location} is the best city!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cce06e72",
+   "metadata": {},
+   "source": [
+    "# Моя перша програма\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "00846c05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello, world!\")\n"
    ]
   }
  ],
