останні зміни стосовно другої лабараторної

--- a/lab_1/my_first_app.ipynb
+++ b/lab_1/my_first_app.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "00846c05",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "print(\"Hello, world!\")\n"
+    "print(\"Hello, world!\")"
    ]
   }
  ],
