--- a/test.ipynb
+++ b/test.ipynb
@@ -19,23 +19,121 @@
     "## Завдання 2\n",
     "\n",
     "Створити клас StringReverser, який:\n",
-    "1. Приймає в конструкторі рядок з декількома словами (наприклад, \"Це тестова стрічка\")\n",
+    "1. Приймає в конструкторі рядок з декількома словами (наприклад, `\"Це тестова стрічка\"`)\n",
     "1. Має метод reverse(), який створює зворотну версію рядка\n",
     "1. Має property reversed_string, яка повертає зворотний рядок\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f5fe441",
+   "metadata": {},
+   "source": [
+    "## System Prompt\n",
+    "\n",
+    "You are an expert Python programmer. Your task is to help the user complete their code according to the specifications provided in the markdown file. Ensure that the code adheres to best practices and is efficient. If there are any ambiguities in the requirements, ask for clarification before proceeding."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bb5c239",
+   "metadata": {},
+   "source": [
+    "## User Prompt\n",
+    "\n",
+    "Твоя задача виконати «Завдання 2» представлене у комірці вище, дотримуючись наступних вимог:\n",
+    "\n",
+    "- створити клас `StringReverser`\n",
+    "- у конструкторі класу приймати рядок з декількома словами\n",
+    "- реалізувати метод `reverse()`, який створює зворотну версію рядка\n",
+    "- створити property `reversed_string`, яка повертає зворотний рядок\n",
+    "- у property обовʼязково використовувати функцію print українською мовою\n",
+    "- створити метод `__str__`, який виводить Імʼя та Групу студента, що виконує завдання (Гучко Назар, КН-33)\n",
+    "- у циклі створити 3 обʼєкти класу з різними вхідними рядками\n",
+    "- запустити код та продемонструвати роботу класу\n",
+    "\n",
+    "Використовуй форматування Markdown для вставки коду.\n",
+    "Дотримуйся стандартів написання програм на Python."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cbc7d226",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Виконав: Гучко Назар, Група: КН-33\n",
+      "Початковий рядок: Це тестова стрічка\n",
+      "Рядок у зворотному порядку: акчіртс авотсет еЦ\n",
+      "----------------------------------------\n",
+      "Виконав: Гучко Назар, Група: КН-33\n",
+      "Початковий рядок: Програмування на Python\n",
+      "Рядок у зворотному порядку: nohtyP ан яннавумаргорП\n",
+      "----------------------------------------\n",
+      "Виконав: Гучко Назар, Група: КН-33\n",
+      "Початковий рядок: Залік з ООП\n",
+      "Рядок у зворотному порядку: ПОО з кілаЗ\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "class StringReverser:\n",
+    "    def __init__(self, text: str) -> None:\n",
+    "        self.text = text\n",
+    "        self._reversed: str | None = None\n",
+    "\n",
+    "    def reverse(self) -> str:\n",
+    "        self._reversed = self.text[::-1]\n",
+    "        return self._reversed\n",
+    "\n",
+    "    @property\n",
+    "    def reversed_string(self) -> str:\n",
+    "        if self._reversed is None:\n",
+    "            self.reverse()\n",
+    "        print(f\"Рядок у зворотному порядку: {self._reversed}\")\n",
+    "        return self._reversed\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return \"Виконав: Гучко Назар, Група: КН-33\"\n",
+    "\n",
+    "\n",
+    "texts = [\n",
+    "    \"Це тестова стрічка\",\n",
+    "    \"Програмування на Python\",\n",
+    "    \"Залік з ООП\"\n",
+    "]\n",
+    "\n",
+    "for text in texts:\n",
+    "    reverser = StringReverser(text)\n",
+    "    print(reverser)\n",
+    "    print(f\"Початковий рядок: {text}\")\n",
+    "    _ = reverser.reversed_string\n",
+    "    print(\"-\" * 40)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
