--- a/lab_5/class_work.ipynb
+++ b/lab_5/class_work.ipynb
@@ -318,6 +318,81 @@
     "D = DamagedSource()\n",
     "print(L.charge(D))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e72a465",
+   "metadata": {},
+   "source": [
+    "# Приклад Абстракції"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6e51e175",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Модель OpenAI GPT-4 Turbo отримала запит: Створи програму на Python для генерації випадкового числа. та створила відповідь на основі цього запиту.\n",
+      "Модель OpenAI GPT-4 Turbo згенерувала результат для запиту: Створи програму на Python для генерації випадкового числа.. Використано технологію: Потужна мовна модель з розширеним аналізом тексту та високою точністю відповідей.\n",
+      "Модель Google Gemini Pro отримала запит: Створи програму на Python для генерації випадкового числа. та створила відповідь на основі цього запиту.\n",
+      "Модель Google Gemini Pro згенерувала результат для запиту: Створи програму на Python для генерації випадкового числа.. Використано технологію: Інтелектуальна система генерації тексту з підтримкою багатозадачності та швидкої обробки даних.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Protocol\n",
+    "\n",
+    "class LLMModelParameter(Protocol):\n",
+    "    @property\n",
+    "    def model_name(self) -> str:\n",
+    "        ...\n",
+    "    \n",
+    "    def info(self) -> str:\n",
+    "        ...\n",
+    "\n",
+    "class AdvancedITCollegeAIUserInterface:\n",
+    "    def __init__(self, ai_model: LLMModelParameter):\n",
+    "        self._model_name = ai_model.model_name\n",
+    "        self._model_info = ai_model.info()\n",
+    "    \n",
+    "    def write_prompt(self, prompt: str) -> str:\n",
+    "        return f\"Модель {self._model_name} отримала запит: {prompt} та створила відповідь на основі цього запиту.\"\n",
+    "    \n",
+    "    def generate_text(self, prompt: str) -> str:\n",
+    "        return f\"Модель {self._model_name} згенерувала результат для запиту: {prompt}. Використано технологію: {self._model_info}\"\n",
+    "\n",
+    "class GPT4:\n",
+    "    @property\n",
+    "    def model_name(self) -> str:\n",
+    "        return \"OpenAI GPT-4 Turbo\"\n",
+    "    \n",
+    "    def info(self) -> str:\n",
+    "        return \"Потужна мовна модель з розширеним аналізом тексту та високою точністю відповідей.\"\n",
+    "\n",
+    "class Gemini:\n",
+    "    @property\n",
+    "    def model_name(self) -> str:\n",
+    "        return \"Google Gemini Pro\"\n",
+    "    \n",
+    "    def info(self) -> str:\n",
+    "        return \"Інтелектуальна система генерації тексту з підтримкою багатозадачності та швидкої обробки даних.\"\n",
+    "\n",
+    "gpt4 = GPT4()\n",
+    "gemini = Gemini()\n",
+    "\n",
+    "AIT = AdvancedITCollegeAIUserInterface(gpt4)\n",
+    "print(AIT.write_prompt(\"Створи програму на Python для генерації випадкового числа.\"))\n",
+    "print(AIT.generate_text(\"Створи програму на Python для генерації випадкового числа.\"))\n",
+    "\n",
+    "AIT_gemini = AdvancedITCollegeAIUserInterface(gemini)\n",
+    "print(AIT_gemini.write_prompt(\"Створи програму на Python для генерації випадкового числа.\"))\n",
+    "print(AIT_gemini.generate_text(\"Створи програму на Python для генерації випадкового числа.\"))\n"
+   ]
   }
  ],
  "metadata": {
